--- a/src/app.scss
+++ b/src/app.scss
@@ -128,7 +128,7 @@
 }
 
 .landing {
-  background-image: url('../assets/landingBackground.png');
+  background-image: url('./assets/landingBackground.png');
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: 50px;
@@ -147,7 +147,7 @@
 }
 
 .pod-platform {
-  background-image: url('../assets/PodBackground.png');
+  background-image: url('./assets/PodBackground.png');
   background-repeat: repeat, no-repeat;
   width: 100%;
   padding-top: 100px;
@@ -174,7 +174,7 @@
 }
 
 .pricing-background {
-  background-image: url('../assets/PricingBackground.png');
+  background-image: url('./assets/PricingBackground.png');
   background-repeat: no-repeat;
   height: 1348px;
   padding-top: 140px;
@@ -285,7 +285,7 @@
 }
 
 .testimonials-background {
-  background-image: url('../assets/TestimonialsBackground.png');
+  background-image: url('./assets/TestimonialsBackground.png');
   background-repeat: no-repeat;
   width: 100%;
   height: 1313px;
