--- a/src/components/StartPage/Startpage.scss
+++ b/src/components/StartPage/Startpage.scss
@@ -61,6 +61,7 @@ body {
 	left: 0px;
 	width: 100%;
 	background: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(25px);
 	z-index: 10;
 }
 
@@ -114,4 +115,14 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+#headerPopup{
+  width:75%;
+  margin:0 auto;
+}
+
+#headerPopup iframe{
+  width:100%;
+  margin:0 auto;
 }
